src/index.css
* {
  box-sizing: border-box;
}

html {
  position: relative;
  min-height: 100%;
  }

body {
  background-size: cover;
  background-attachment: fixed;
  background-color: #ff0d7b;
}

body, html {
  height: 100%;
  padding: 0;
  margin: 0 0 100px; 
  font-family: 'Quicksand', sans-serif;
  font-weight: 300;
  color: #fff;
}

a {
  text-decoration: none;
  color: #fff;
  font-weight: bold;
  transition: color .5s;
}

a:hover {
  color: #f80265;
}

button {
  background-color: #0067e8;
  border: 0;
  padding: 5px;
  color: white;
  font-weight: bold;
  transition: background-color .1s;
  cursor: pointer;
  border-radius: 5px;
}

button:hover {
  background-color: #f80265;
}

/* .post-list {
  margin: 0;
  padding: 0;

} */

textarea, input {
  padding: .5%;
  border-radius: 5px;
  border: 1px solid #ccc;
  height: 30px;
  width: 100%;
}

textarea:focus, input:focus {
  outline: none;
  border: 1px solid #fa4568;
}

textarea {
  width: 100%;
  min-height: 200px;
  font-size: 15px;
}

form {
  width:100%;
}

form > div {
  margin-bottom: 2%;
}

form label {
  display: block;
}

header {
  height: 85px;
  /* background-image: linear-gradient(black, #590004, #a50104); */
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 1%;
  background-color: #ff0d7b;
  /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  z-index: 9999;
}

.head-container {
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center; 
}

.right {
  width: 60%;
  text-align:left;
}

.right a {
  color: #fff;
}

.right a:hover {
  color: #fff;
}

header h1 a {
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
  font-size: 30px;
  color: #fff;
  letter-spacing: 2px;
  padding: 0px;
  width:33%;
}
h1 {
  min-width: 220px;
  padding-right: 5px;
  padding-left:5px;
}

h2 {
  color:  #000;
  /* text-align: center; */
  /* font-size: 170%;
  color:  #000;
  text-align: center;
  letter-spacing: 2px; */
}

h3 {
  font-size: 150%;
  margin-bottom: 5px;
  letter-spacing: 2px;
}

header h1 a:hover {
  color:#fff !important;
}

.headmini {
  font-size: 30px;
  font-family: 'Quicksand', sans-serif;
  font-weight: 500;
  margin-right: 0px;
  margin-left: 0px;
  padding: 0px;
  color: #fff;
}

nav {
  font-weight: normal;
  width:60%;
  text-align:right;
  padding: 0px;
  padding-top: 15px;
  letter-spacing: 2px;
}

ul {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
}


nav li {
  color: #fff;
  font-size: 18px;
  padding-left: 20px;
}

nav li:hover .navActive {
  color: #eaef3a;
}

main {

  padding: 0% 25%;
  z-index: 8000;
  position: relative;
  background-attachment: fixed;
  /* display: flex; */
  /* justify-content: center; */
  background-size: cover;
  display: flex;
  justify-content: center;
  /* align-items: center; */
}

section {
  background-attachment: scroll;
  padding: 10px 10px;
  /* margin-bottom: 25px;
  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
  background: rgba(255, 255, 255, 0.95);
  border: 1px solid #fa4568;
  border-radius: 25px;
  display: flex;
  justify-content: left;
  width:100%;
  min-width: 375px;
  margin-bottom:100px; */
} 

/* .center-content {
  display: flex;
  justify-content: center;
}
 */
/* article {
  width: 100%;
}
 */
/* .post-section {
  background-attachment: scroll;
  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
  padding: 10px;
  margin-bottom: 25px;
  background: rgba(255, 255, 255, 0.95);
  width: 100%;
  border: 1px solid #fa4568;
  border-radius: 25px;
  min-width: 375px;
} */

/* .post-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-bottom:100px;
} */

.section-form {
  background-attachment: scroll;
  box-shadow: 0px 3px 8px 3px rgba(0,0,0,0.25);
  padding: 10px 20px;
  margin-bottom: 25px;
  background: rgba(255, 255, 255, 0.95);
  border: 1px solid #fa4568;
  border-radius: 25px;
  width:100%;
  margin-bottom:100px;
  min-width: 375px;
}

.form-center {
  display: flex;
  justify-content: center;
  width: 300px;
}

.btn-no-style {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  text-decoration: none;
  color: #eaef3a;
  font-size: 100%;
  font-weight: bold;
  transition: color .1s;
  margin-left: 16px;
}

.btn-no-style:hover {
  background: none;
  color: #fff;
}

.login-form .signup-form {
  width: 200px;
  line-height: 25px;
}

.delete-post-btn {
  background-color: #ff643d;
}

.delete-post-btn:hover {
  background-color: #f80265;
}

/* .post {
  margin-bottom: 2%;
  line-height: 150%;
} */

/* .diamond {
  text-align:center;
  color: #fa4568;
  font-size: 1.2em;
} */

.post .title span {
  font-style: italic;
  font-size: 90%;
  color: #7d7d7d;
}

.edit-link {
  display: block;
  margin: -1.5% 0 2% 0;
}

.comment-form {
  margin-bottom: 5%;
}

.comment {
  padding: 1%;
  margin-bottom: 1%;
}

.comment:nth-child(odd) {
  background-color: #d4e8ec;
}

.byline {
  font-size: 90% !important;
  margin-bottom: 15px;
  color: #fff;
}

.comment .meta {
  font-size: 90% !important;
  margin-bottom: .5%;
  opacity: .6;
}

.new-post-form input {
  width: 100%;
}

.edit-post-form {
  width: 100%;
  margin-bottom: 5%;
}

.spacebottom {
  margin-bottom: 100px;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  height: 150px;
  width: 100%;
  color:#FFFFFF; 
  background-color: #ff0d7b;
  font-size:1.5em;
  line-height: 24px;
  text-align: center;
  padding: 15px;
  z-index: 9999;
      /* background-image: linear-gradient(#ff0d7b,#ff0d7b,#00378e); */
  /* -webkit-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
  -moz-box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49);
  box-shadow: 0px 3px 15px 10px rgba(0,0,0,0.49); */
}

.welcome {
  color:  #eaef3a;
  letter-spacing: 2px;
}

/* .logged-in {
  font-size: .7em;
  letter-spacing: 1px;
}
 */
.copytech {
  font-size: 12px;
  color: #fa4568;
  letter-spacing: 2px;
}

.copyends {
  font-size: 12px;
  color: #fff;
  letter-spacing: 2px;
}

@media screen and (max-width: 800px)  {
  main {
    padding: 0;
  }

.right {
  font-size: 13px;
}

h1 {
font-size: 12px;
text-align:center;
}

.headmini {
  font-size: 20px;
}

.headbracket {
  font-size: 20px;
}

nav {
  font-size: 13px;
}
}

